--- a/css/style.less
+++ b/css/style.less
@@ -342,14 +342,24 @@ h2, h3 {
   }
 }
 
+
+  .mobile-wrapper {
+    height: 2000px;
+  }
+
+
   .mobile {
-    margin-top: 100px;
-    font-size: 40px;
+    
+    font-size: 80px;
     a {
       color: #4C4A4A;
       &:hover {
-        color: #fff;
+        text-decoration: underline;
       }
+    }
+
+    li {
+      margin: 40px 0;
     }
     
   }
@@ -809,6 +819,7 @@ gallery */
   padding: 30px 0;
   background: #e8f5ff;
   width: 100%;
+  margin-bottom: 10px;
 
   .gallery-button {
     border-radius: 0;
